# formatjson

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  nodes.rs  token_formatter.rs  tokenizer.rs  validator.rs
tests/: e2e_tests.rs  validator_tests.rs
tests/json_data/: simple.formatted.json  simple.json  userdata.formatted.json  userdata.json
